--- a/less/common.less
+++ b/less/common.less
@@ -1,4 +1,16 @@
 /*
+ * Common node formatting
+ */
+.stack {
+  .make-row();
+
+  .box {
+    .make-xs-column(12);
+    .make-md-column(6);
+  }
+}
+
+/*
  * Common views formatting
  */
 .view {
