--- a/css/style.css
+++ b/css/style.css
@@ -10363,6 +10363,7 @@ a.sidebar-2-region .block-system .block-panel .view-city-to-activity .field-name
   padding: 15px;
   padding-top: 0;
 }
+.content-region .block-system .block-panel > .entity,
 .content-region .block-system .block-panel article {
   padding: 15px;
 }
@@ -11113,7 +11114,9 @@ textarea.webform-component input.email {
 .resizable-textarea textarea {
   border-radius: 20px 20px 0 0;
 }
+.page-civicrm-event .tabs--primary.nav-tabs,
 .page-node .tabs--primary.nav-tabs,
+.page-civicrm-event ul.action-links,
 .page-node ul.action-links {
   display: none;
 }
