--- a/less/content.less
+++ b/less/content.less
@@ -437,6 +437,7 @@
 		padding-top: 0;
 	}
 
+	& > .entity,
 	article {
 		padding: ( @grid-gutter-width / 2);
 	}
@@ -805,6 +806,7 @@
 	border-radius: 20px 20px 0 0;
 }
 
+.page-civicrm-event,
 .page-node {
   .tabs--primary.nav-tabs,
   ul.action-links {
