--- a/less/content.less
+++ b/less/content.less
@@ -533,8 +533,14 @@
 	.field-name-body,
 	.field-name-field-content,
 	.field-name-field-video,
-	.field-name-field-civievent {
+	.field-name-field-civievent,
+	.entity-property-summary,
+	.entity-property-description {
 		margin-bottom: 25px;
+	}
+
+	.entity-property-summary {
+		font-size: @font-size-large;
 	}
 
 	.field-name-field-topic + .field-name-body,
