--- a/less/content.less
+++ b/less/content.less
@@ -862,3 +862,20 @@
     display: none;
   }
 }
+
+/*
+ * GMap configuration
+ */
+.gmap {
+  width: 100% !important;
+
+  .gmap-popup {
+    .views-field {
+      margin: 0;
+      padding: 0;
+      font-size: @font-size-base;
+      line-height: @line-height-computed;
+    }
+  }
+}
+
