--- a/css/style.css
+++ b/css/style.css
@@ -10236,6 +10236,12 @@ a.sidebar-2-region .block-system .block-panel .view-city-to-activity .field-name
   font-style: italic;
   display: inline-block;
 }
+.content-region .block-views .block-panel div.views-field.views-field-display-name,
+.sidebar-1-region .block-views .block-panel div.views-field.views-field-display-name,
+.sidebar-2-region .block-views .block-panel div.views-field.views-field-display-name,
+.content-region .block-system .block-panel div.views-field.views-field-display-name,
+.sidebar-1-region .block-system .block-panel div.views-field.views-field-display-name,
+.sidebar-2-region .block-system .block-panel div.views-field.views-field-display-name,
 .content-region .block-views .block-panel div.views-field.views-field-taxonomy-vocabulary-1,
 .sidebar-1-region .block-views .block-panel div.views-field.views-field-taxonomy-vocabulary-1,
 .sidebar-2-region .block-views .block-panel div.views-field.views-field-taxonomy-vocabulary-1,
@@ -11217,7 +11223,7 @@ a.link-button:focus {
 }
 .gmap .gmap-popup .views-field {
   margin: 0;
-  padding: 0;
+  padding: 0 !important;
   font-size: 14px;
   line-height: 20px;
 }
