--- a/less/content.less
+++ b/less/content.less
@@ -351,6 +351,7 @@
 					}
 				}
 
+				&.views-field-display-name,
 				&.views-field-taxonomy-vocabulary-1,
 				&.views-field-field-in-activity,
 				&.views-field-field-speakers {
@@ -872,7 +873,7 @@
   .gmap-popup {
     .views-field {
       margin: 0;
-      padding: 0;
+      padding: 0 !important;
       font-size: @font-size-base;
       line-height: @line-height-computed;
     }
