--- a/less/common.less
+++ b/less/common.less
@@ -20,6 +20,20 @@
   }
 }
 
+.link-button {
+  .badge;
+
+  background-color: @brand-primary;
+  font-size: @font-size-base;
+  padding: floor(@line-height-computed / 2) floor(@grid-gutter-width / 2);
+  border-radius: @line-height-computed;
+
+  a {
+    color: white;
+    font-weight: bold;
+  }
+}
+
 /*
  * Common views formatting
  */
@@ -310,6 +324,11 @@
         height: auto !important;
       }
     }
+  }
+
+  .crm-container .credit_card_type-section .crm-credit_card_type-icons a {
+    width: 52px;
+    height: 33px;
   }
 }
 
