--- a/less/content.less
+++ b/less/content.less
@@ -315,7 +315,7 @@
 				&.views-field-field-is-text,
 				&.views-field-field-is-video {
 					float: left;
-					margin-left: -60px;
+					padding-left: 0;
 				}
 
 				&.views-field-field-image,
