Pad view-header elements

--- a/less/content.less
+++ b/less/content.less
@@ -178,7 +178,7 @@
 			}
 
 			.view-header {
-				margin-bottom: @grid-gutter-width;
+				padding: 0 10px @line-height-computed 10px;
 			}
 
 			.views-row + h3 {
@@ -224,8 +224,6 @@
 
 			.view-city-to-activity .field-name-field-add-to-calendar {
 				position: relative;
-				padding-left: ( @grid-gutter-width / 2);
-				padding-right: ( @grid-gutter-width / 2);
 
 				a {
 					.badge;
@@ -389,7 +387,7 @@
 
 
 	.block-block .block-panel {
-		padding: 0 10px 20px 10px;
+		padding: 0 10px @line-height-computed 10px;
 
 		.block-title {
 			margin-left: -10px; 
