--- a/css/style.css
+++ b/css/style.css
@@ -9765,7 +9765,7 @@ a.sidebar-2-region .block-views .block-panel .more-link:focus {
 .content-region .block-block .block-panel .view-header,
 .sidebar-1-region .block-block .block-panel .view-header,
 .sidebar-2-region .block-block .block-panel .view-header {
-  margin-bottom: 30px;
+  padding: 0 10px 20px 10px;
 }
 .content-region .block-views .block-panel .views-row + h3,
 .sidebar-1-region .block-views .block-panel .views-row + h3,
@@ -9903,8 +9903,6 @@ a.sidebar-2-region .block-views .block-panel .more-link:focus {
 .sidebar-1-region .block-system .block-panel .view-city-to-activity .field-name-field-add-to-calendar,
 .sidebar-2-region .block-system .block-panel .view-city-to-activity .field-name-field-add-to-calendar {
   position: relative;
-  padding-left: 15px;
-  padding-right: 15px;
 }
 .content-region .block-views .block-panel .view-city-to-activity .field-name-field-add-to-calendar a,
 .sidebar-1-region .block-views .block-panel .view-city-to-activity .field-name-field-add-to-calendar a,
