Increase font size of views-field-field-staff-contact

--- a/less/content.less
+++ b/less/content.less
@@ -354,6 +354,10 @@
 					font-weight: bold;
 				}
 
+			        &.views-field-field-staff-contact {
+					font-size: @font-size-h3;
+				}
+
 				&.views-field-body {
 					margin-top: 10px; // Matches the margin under a H3 views-field-title
 				}
