--- a/css/style.css
+++ b/css/style.css
@@ -10756,27 +10756,20 @@ a.content-region .block-system .block-panel .field-name-field-topics .field-item
   margin-left: 3px;
 }
 .content-region .block-system .block-panel .field-name-field-addthis {
-  min-height: 20px;
-  padding: 19px;
-  margin-bottom: 20px;
-  background-color: #f5f5f5;
-  border: 1px solid #e3e3e3;
-  border-radius: 4px;
-  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
-  -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
-  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
   clear: both;
   margin-top: 25px;
-  background-color: #d8eaf9;
-  border-radius: 10px;
-  border-color: #036fba;
 }
-.content-region .block-system .block-panel .field-name-field-addthis blockquote {
-  border-color: #ddd;
-  border-color: rgba(0, 0, 0, 0.15);
+.content-region .block-system .block-panel .field-name-field-addthis a.at300b {
+  height: 40px;
+  margin: 0;
 }
-.content-region .block-system .block-panel .field-name-field-addthis .addthis_button_facebook {
+.content-region .block-system .block-panel .field-name-field-addthis a.addthis_button_facebook {
   clear: left;
+}
+@media (min-width: 480px) {
+  .content-region .block-system .block-panel .field-name-field-addthis a.addthis_button_facebook {
+    clear: none;
+  }
 }
 .content-region .block-system .block-panel .profile .user-picture {
   float: right;
