--- a/less/content.less
+++ b/less/content.less
@@ -25,8 +25,13 @@
 			.make-md-column(6);
 		}
 
+		/*
+		 * Some blocks in the Content region are full-width
+		 */
 		#block-views-city-to-event-block-1,
-		#block-views-city-to-event-block-3 {
+		#block-views-city-to-event-block-3,
+		#block-views-city-to-activity-block-1,
+		#block-views-city-to-activity-block-3 {
 			&.block-views{
 				.make-md-column(12);
 			}
