--- a/css/style.css
+++ b/css/style.css
@@ -8349,8 +8349,6 @@ iframe {
   border-color: #ffffff;
   border: none;
   box-shadow: none;
-  padding-bottom: 20px;
-  margin-bottom: 25px;
 }
 .content-region .block-system .block-panel > .list-group,
 .content-region .block-system .block-panel > .panel-collapse > .list-group {
@@ -8542,9 +8540,6 @@ iframe {
   -moz-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05);
   box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05);
   border-color: #96c6ef;
-  border-radius: 10px;
-  padding-bottom: 10px;
-  margin-bottom: 25px;
 }
 .content-region .block-views .block-panel > .list-group,
 .content-region .block-views .block-panel > .panel-collapse > .list-group {
@@ -8802,9 +8797,6 @@ a.content-region .block-views .block-panel .more-link:focus {
   -moz-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05);
   box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05);
   border-color: #96c6ef;
-  border-radius: 10px;
-  padding-bottom: 20px;
-  margin-bottom: 25px;
 }
 .content-region .block-block .block-panel > .list-group,
 .content-region .block-block .block-panel > .panel-collapse > .list-group {
@@ -9012,9 +9004,6 @@ a.content-region .block-views .block-panel .more-link:focus {
   -moz-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05);
   box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05);
   border-color: #036fba;
-  border-radius: 10px;
-  padding-bottom: 10px;
-  margin-bottom: 25px;
 }
 .sidebar-1-region .block-views .block-panel > .list-group,
 .sidebar-2-region .block-views .block-panel > .list-group,
@@ -9404,9 +9393,6 @@ a.sidebar-2-region .block-views .block-panel .more-link:focus {
   -moz-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05);
   box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05);
   border-color: #036fba;
-  border-radius: 10px;
-  padding-bottom: 20px;
-  margin-bottom: 25px;
 }
 .sidebar-1-region .block-block .block-panel > .list-group,
 .sidebar-2-region .block-block .block-panel > .list-group,
@@ -9729,6 +9715,19 @@ a.sidebar-2-region .block-views .block-panel .more-link:focus {
   display: block;
   max-width: 100%;
   height: auto;
+}
+.content-region .block-views .block-panel,
+.sidebar-1-region .block-views .block-panel,
+.sidebar-2-region .block-views .block-panel,
+.content-region .block-system .block-panel,
+.sidebar-1-region .block-system .block-panel,
+.sidebar-2-region .block-system .block-panel,
+.content-region .block-block .block-panel,
+.sidebar-1-region .block-block .block-panel,
+.sidebar-2-region .block-block .block-panel {
+  border-radius: 10px;
+  padding-bottom: 20px;
+  margin-bottom: 25px;
 }
 .content-region .block-views .block-panel .block-title,
 .sidebar-1-region .block-views .block-panel .block-title,
@@ -10166,8 +10165,7 @@ a.sidebar-2-region .block-system .block-panel .view-city-to-activity .field-name
 .content-region .block-system .block-panel .views-exposed-form,
 .sidebar-1-region .block-system .block-panel .views-exposed-form,
 .sidebar-2-region .block-system .block-panel .views-exposed-form {
-  padding: 10px;
-  padding-top: 0;
+  padding: 0 10px;
 }
 .content-region .block-views .block-panel .view-content .btn,
 .sidebar-1-region .block-views .block-panel .view-content .btn,
