--- a/less/header.less
+++ b/less/header.less
@@ -113,6 +113,8 @@
 				.make-lg-column(3*12/8);
 				.make-lg-column-offset(2*12/8);
 
+				margin-bottom: 0;
+
 				.block-panel {
 					margin-top: 45px;
 
