--- a/less/header.less
+++ b/less/header.less
@@ -183,6 +183,7 @@
 .menu-adelaide,
 .menu-brisbane,
 .menu-canberra,
+.menu-hobart,
 .menu-melbourne,
 .menu-perth,
 .menu-sydney {
@@ -193,6 +194,7 @@
 .city-adelaide  .city-menu .menu-adelaide,
 .city-brisbane  .city-menu .menu-brisbane,
 .city-canberra  .city-menu .menu-canberra,
+.city-hobart    .city-menu .menu-hobart,
 .city-melbourne .city-menu .menu-melbourne,
 .city-perth     .city-menu .menu-perth,
 .city-sydney    .city-menu .menu-sydney {
