Add formatting for menu-home in Hobart

--- a/css/style.css
+++ b/css/style.css
@@ -7571,6 +7571,7 @@ table .checkbox input[type="checkbox"] {
 .city-adelaide .menu-home,
 .city-brisbane .menu-home,
 .city-canberra .menu-home,
+.city-hobart .menu-home,
 .city-melbourne .menu-home,
 .city-perth .menu-home,
 .city-sydney .menu-home {
