Enlarge the text on the CiviCRM Event Price Set view

--- a/less/content.less
+++ b/less/content.less
@@ -920,6 +920,8 @@
 
   .views-row {
     padding-top: @line-height-computed;
+    line-height: @line-height-computed;
+    font-size: @font-size-large;
   }
 
   .views-row + h3 {
