--- a/less/common.less
+++ b/less/common.less
@@ -40,7 +40,7 @@
   img {
     float: right !important;
     margin: 0 0 @line-height-computed floor(@grid-gutter-width / 2) !important;
-    padding: 0 0 floor(@grid-gutter-width / 2) 0 !important;
+    padding: 0 0 0 floor(@grid-gutter-width / 2) !important;
   }
 }
 
