--- a/less/content.less
+++ b/less/content.less
@@ -541,11 +541,13 @@
 		.field-name-field-content,
 		.field-name-field-video,
 		.field-name-field-civievent,
+		.field-name-field-subtitle,
 		.entity-property-summary,
 		.entity-property-description {
 			margin-bottom: 25px;
 		}
 
+		.field-name-field-subtitle,
 		.entity-property-summary {
 			font-size: @font-size-large;
 		}
