Format readonly form controls as plain text in .deform fieldsets - makes Staff contact details appear like they are not form elements

--- a/less/common.less
+++ b/less/common.less
@@ -424,6 +424,17 @@ form {
   .captcha {
     margin: @line-height-computed 0;
   }
+
+  .deform {
+    .webform-component {
+      .form-control[readonly] {
+        border: 0;
+        padding: 0;
+        background-color: transparent;
+        box-shadow: unset;
+      }
+    }
+  }
 }
 
 div.token-input-dropdown {
