Format views-field-field-subtitle the same as views-field-body

--- a/less/content.less
+++ b/less/content.less
@@ -365,6 +365,7 @@
 					font-size: @font-size-h3;
 				}
 
+				&.views-field-field-subtitle,
 				&.views-field-body {
 					margin-top: 10px; // Matches the margin under a H3 views-field-title
 				}
