--- a/css/style.css
+++ b/css/style.css
@@ -10403,6 +10403,12 @@ a.sidebar-2-region .block-system .block-panel .view-city-to-activity .field-name
 .sidebar-2-region .block-system .block-panel div.views-field.views-field-field-staff-contact {
   font-size: 18px;
 }
+.content-region .block-views .block-panel div.views-field.views-field-field-subtitle,
+.sidebar-1-region .block-views .block-panel div.views-field.views-field-field-subtitle,
+.sidebar-2-region .block-views .block-panel div.views-field.views-field-field-subtitle,
+.content-region .block-system .block-panel div.views-field.views-field-field-subtitle,
+.sidebar-1-region .block-system .block-panel div.views-field.views-field-field-subtitle,
+.sidebar-2-region .block-system .block-panel div.views-field.views-field-field-subtitle,
 .content-region .block-views .block-panel div.views-field.views-field-body,
 .sidebar-1-region .block-views .block-panel div.views-field.views-field-body,
 .sidebar-2-region .block-views .block-panel div.views-field.views-field-body,
