--- a/css/style.css
+++ b/css/style.css
@@ -7932,20 +7932,28 @@ a.link-button:focus {
    * Don't pad nested empty views.
    */
 }
+.view .view-empty {
+  /*
+     * Hide the more-link if the view is empty
+     */
+}
 .view .view-empty .view-content,
 .view .view-empty .view-empty,
 .view .view-empty .views-exposed-form {
   padding: 0 !important;
 }
+.view .view-empty + .more-link {
+  display: none !important;
+}
 .view .view-grouping .view-grouping-header {
   font-size: 18px;
+  line-height: 1.3333333;
   font-weight: bold;
-  line-height: 40px;
 }
 .view .views-table caption {
   font-size: 16px;
+  line-height: 1.3333333;
   font-weight: bold;
-  line-height: 40px;
 }
 /*
  * Common block formatting
