--- a/less/header.less
+++ b/less/header.less
@@ -416,4 +416,14 @@
 .library-header-inner {
 	position: relative;
 	z-index: 2;
+
+	.dropdown-menu {
+		top: 0;
+		left: 20px;
+		margin: 1px;
+	}
+
+	a {
+		text-align: center;
+	}
 }
