--- a/less/content.less
+++ b/less/content.less
@@ -31,7 +31,8 @@
 		#block-views-city-to-event-block-1,
 		#block-views-city-to-event-block-3,
 		#block-views-city-to-activity-block-1,
-		#block-views-city-to-activity-block-3 {
+		#block-views-city-to-activity-block-3,
+		.content-full-width {
 			&.block-views{
 				.make-md-column(12);
 			}
