Preserve formatting that will be affected by the upgrade to tablefield-7.x-3.1

--- a/less/content.less
+++ b/less/content.less
@@ -670,10 +670,13 @@
 	clear: both;
 
 	.tablefield-wrapper {
-		.tablefield {
+		table.tablefield {
 			.panel;
 			.panel-variant(lighten(@cbf-dark-blue, 15%); white; @cbf-dark-blue; @cbf-dark-blue);
 
+			width: 100%;
+
+			border-collapse: separate;  // Enforce default
 			border-radius: 10px;
 
 			thead {
