Hide the action links that authenticated users see on node and civicrm-event pages (moving Less code from content.less to common.less)

--- a/css/style.css
+++ b/css/style.css
@@ -7964,6 +7964,15 @@ a.link-button:focus {
   font-weight: bold;
 }
 /*
+ * Common page formatting
+ */
+.page-civicrm-event .tabs--primary.nav-tabs,
+.page-node .tabs--primary.nav-tabs,
+.page-civicrm-event ul.action-links,
+.page-node ul.action-links {
+  display: none;
+}
+/*
  * Common block formatting
  */
 .block-system,
@@ -11422,12 +11431,6 @@ textarea.webform-component input.email {
 }
 .resizable-textarea textarea {
   border-radius: 20px 20px 0 0;
-}
-.page-civicrm-event .tabs--primary.nav-tabs,
-.page-node .tabs--primary.nav-tabs,
-.page-civicrm-event ul.action-links,
-.page-node ul.action-links {
-  display: none;
 }
 /*
  * CiviCRM Event entity pages
