If there is no image field in a node, clear:right the body field. Also fixed a typo.

--- a/less/content.less
+++ b/less/content.less
@@ -590,7 +590,7 @@
 		.field-name-field-in-activity {
 			font-size: @font-size-h3;
 		}
-7
+
 		.field-name-field-date-text {
 			font-weight: bold;
 		}
@@ -642,6 +642,10 @@
 		.field-name-field-topic + .field-name-body,
 		.field-name-field-topics + .field-name-body {
 			margin-top: 25px;
+		}
+
+		.field-name-field-date-text + .field-name-body {
+			clear: right;
 		}
 
 		.field-name-field-add-to-calendar {
