--- a/css/style.css
+++ b/css/style.css
@@ -10981,9 +10981,9 @@ a.content-region .block-system .block-panel article .field-name-field-add-to-cal
 .content-region .block-system .block-panel article .field-name-field-in-activity {
   font-size: 18px;
 }
-.content-region .block-system .block-panel > .entity 7 .field-name-field-date-text,
-.content-region .block-system .block-panel .view-shop-cbf-product 7 .field-name-field-date-text,
-.content-region .block-system .block-panel article 7 .field-name-field-date-text {
+.content-region .block-system .block-panel > .entity .field-name-field-date-text,
+.content-region .block-system .block-panel .view-shop-cbf-product .field-name-field-date-text,
+.content-region .block-system .block-panel article .field-name-field-date-text {
   font-weight: bold;
 }
 .content-region .block-system .block-panel > .entity .views-field-field-image,
@@ -11088,6 +11088,11 @@ a.content-region .block-system .block-panel article .field-name-field-add-to-cal
 .content-region .block-system .block-panel .view-shop-cbf-product .field-name-field-topics + .field-name-body,
 .content-region .block-system .block-panel article .field-name-field-topics + .field-name-body {
   margin-top: 25px;
+}
+.content-region .block-system .block-panel > .entity .field-name-field-date-text + .field-name-body,
+.content-region .block-system .block-panel .view-shop-cbf-product .field-name-field-date-text + .field-name-body,
+.content-region .block-system .block-panel article .field-name-field-date-text + .field-name-body {
+  clear: right;
 }
 .content-region .block-system .block-panel > .entity .field-name-field-add-to-calendar,
 .content-region .block-system .block-panel .view-shop-cbf-product .field-name-field-add-to-calendar,
