Align a node's title and subtitle by indenting .field-name-field-subtitle by the width of a .page-header i element

--- a/less/content.less
+++ b/less/content.less
@@ -633,6 +633,10 @@
 			margin-bottom: 25px;
 		}
 
+		.field-name-field-subtitle {
+			margin-left: (50px + 10px);	// Width of .page-header i element
+		}
+
 		.views-field-field-subtitle,
 		.field-name-field-subtitle,
 		.entity-property-summary {
@@ -1051,4 +1055,3 @@
     }
   }
 }
-
