--- a/css/style.css
+++ b/css/style.css
@@ -11070,6 +11070,11 @@ a.content-region .block-system .block-panel article .field-name-field-add-to-cal
 .content-region .block-system .block-panel article .entity-property-description {
   margin-bottom: 25px;
 }
+.content-region .block-system .block-panel > .entity .field-name-field-subtitle,
+.content-region .block-system .block-panel .view-shop-cbf-product .field-name-field-subtitle,
+.content-region .block-system .block-panel article .field-name-field-subtitle {
+  margin-left: 60px;
+}
 .content-region .block-system .block-panel > .entity .views-field-field-subtitle,
 .content-region .block-system .block-panel .view-shop-cbf-product .views-field-field-subtitle,
 .content-region .block-system .block-panel article .views-field-field-subtitle,
