--- a/css/style.css
+++ b/css/style.css
@@ -11127,6 +11127,9 @@ a.content-region .block-system .block-panel article .field-name-field-add-to-cal
 .content-region .block-system .block-panel article .field-name-field-add-to-calendar ul {
   margin-bottom: 25px;
 }
+.content-region .block-system .block-panel > .entity .field-name-field-content,
+.content-region .block-system .block-panel .view-shop-cbf-product .field-name-field-content,
+.content-region .block-system .block-panel article .field-name-field-content,
 .content-region .block-system .block-panel > .entity .field-name-field-video,
 .content-region .block-system .block-panel .view-shop-cbf-product .field-name-field-video,
 .content-region .block-system .block-panel article .field-name-field-video {
