No margin-left on subtitles on node-type-page

--- a/less/content.less
+++ b/less/content.less
@@ -761,7 +761,7 @@
 }
 
 .node-type-page .content-region .block-system .block-panel article .field-name-field-subtitle {
-	margin-left: 0;
+	margin-left: 0;		// No i element in page-header
 }
 
 .field-type-tablefield {
